attempting float to stop scroll jumping

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 
 /* all nav bar css *******************************/
 nav {
+    float: left;
 }
 
 nav ul {
@@ -65,6 +66,7 @@ p a[href="/about"]:hover {
 
 /* page title */
 h1 {
+    float: left;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #ffffff;
@@ -93,6 +95,7 @@ p {
 /* All CSS For Footer *************************************/
 
 footer {
+    float: left;
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
